# voxelization

./: .gitignore  CMakeLists.txt  box.cpp  build.ps1  flat_shader.cpp  flat_shader.h  main.cpp  mesh.cpp  mesh.h  object.h  parse.cpp  phong_shader.cpp  phong_shader.h  plane.cpp  random_shader.cpp  random_shader.h  ray_tracer  reflective_shader.cpp  reflective_shader.h  render_world.cpp  render_world.h  shader.h  sphere.cpp  voxel_face_uniform_shader.cpp  voxel_face_uniform_shader.h  voxel_frame_shader.cpp  voxel_frame_shader.h  voxel_uniform_shader.cpp  voxel_uniform_shader.h  voxelized_mesh.cpp  voxelized_mesh.h
input/: 00.txt  01.txt  02.txt  multiple.txt  origin_phong.txt  shaders.txt  voxel0.txt  voxelized_cow.txt  voxelized_phong.txt  voxelized_random.txt  voxelized_uniform_phong.txt
todo/: TODO_CHECKLIST.md
